	* src/lib/main.py: Correctly catch and display PGN errors
	* src/lib/gtkui/gtkui.py, src/lib/display.py: Show dialog if unable to claim draw (Bug #515542)
	* src/lib/chess/board.py:
	  src/lib/game.py: Added detection for draw due to insufficient material (Bug #485250)
	* src/lib/game.py: Fix regression in loaded games not displaying result

2008-04-13  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/ai.py: Check PID returned on SIGCHLD (Bug #527686)

2008-04-12  Jordi Mallach  <jordi@sindominio.net>

	* src/lib/main.py: Add missing gettext call for the Application Log
	viewer.

2008-04-10  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/network.py: Handle missing throbber icons (Bug #524829)
	* src/lib/gtkui/network.py: Disable room 'new' and 'join' buttons when network
	  protocol is busy (Bug #523818)
	* src/lib/glchess.py: Import the main module on initialisation not runtime (Bug #524665)
        * src/lib/history.py: Abort history saving if cannot create history directory (Bug #523076)

2008-04-5  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/gtkui/chessview.py: Abort 3D render if widget_get_gl_context() returns None (Bug #512068)
	* data/ai.xml: Add Gambit Fruit to AI list (Bug #521623)
	* src/lib/game.py: Handle AI players dying before the game starts (Bug #522341)

2008-03-24  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/opengl: Handle GLError->GLerror, GLUError -> GLUerror objects being renamed
	  in PyOpenGL 3.0 (Bug #503238)

2008-03-11  Robert Ancell  <robert.ancell@gmail.com>

	* src/lib/scene/opengl/opengl.py: Add board numbering to 3D mode (bug #392286)
	* src/lib/scene/opengl/opengl.py: Fix skip rotation bug when open facing black
        * src/lib/display.py: Fix board numbering hiding when changing 2D<->3D mode

2008-03-10  Jason Clinton  <me@jasonclinton.com>
 
	* src/lib/ai.py: Commit fix for blocker #517347. AI was considered
	losing after a resign occured.
