@@ -7,6 +7,10 @@
 	* src/lib/chess/board.py:
 	  src/lib/game.py: Added detection for draw due to insufficient material (Bug #485250)
 	* src/lib/game.py: Fix regression in loaded games not displaying result
+	* src/lib/history.py:
+	* src/lib/display.py:
+	* src/lib/main.py: Correctly move games from the history (~/.gnome2/glchess/history)
+	  when the user selects a file to save to.
 
 2008-04-13  Robert Ancell  <robert.ancell@gmail.com>
 
